--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "homepage": " http://reknightly.github.io/portfolio",
-  "name": "gatsby-starter-hello-world",
+  "homepage": " https://ryanknightly.com",
+  "name": "rknightly-portfolio",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
-  "version": "0.1.0",
+  "description": "Ryan Knightly's developer portfolio",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "deploy": "gatsby build --prefix-paths && gh-pages -d public",
@@ -55,7 +55,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/rknightly/portfolio"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
